# encryptipy

./: .gitignore  LICENSE  README.md  setup.cfg
gpg_pyencrypt/: encrypt.py
gpg_pyencrypt/settings/: .env-sample
