[metadata]
name = gpg_pyencrypt
version = 0.0.1
author = Sreenath P
author_email = sreenath.pottuthodi@gmail.com
description = For encrypting and decrypting files using GPG encryption method
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sreena7h/gpg-pyencrypt/

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6.7
include_package_data = True
